implement GraphicalObject class

--- a/graphicobjects/CMakeLists.txt
+++ b/graphicobjects/CMakeLists.txt
@@ -1,5 +1,13 @@
+find_package(Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt5 REQUIRED COMPONENTS Core)
+
 set(SOURCES point.cpp
-            graphicalobject.cpp)
+            graphicalobject.cpp
+            testfigure.cpp)
 set(HEADERS point.h
-            graphicalobject.h)
+            graphicalobject.h
+            testfigure.h)
+
 ADD_LIBRARY(graphicobjects STATIC ${HEADERS} ${SOURCES})
+
+target_link_libraries(graphicobjects PRIVATE Qt5::Widgets Qt5::Core)
