--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt5 REQUIRED COMPONENTS Core)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -25,5 +25,5 @@ set(PROJECT_SOURCES
 
 add_executable(landing-algo ${PROJECT_SOURCES})
 
-target_link_libraries(landing-algo PRIVATE Qt5::Widgets)
+target_link_libraries(landing-algo PRIVATE Qt5::Widgets Qt5::Core)
 target_link_libraries(landing-algo PRIVATE graphicobjects)
