--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        gamewindow.h
+        gamewindow.cpp
+        gamewindow.ui
 )
 
 add_executable(landing-algo ${PROJECT_SOURCES})
