--- a/graphicobjects/CMakeLists.txt
+++ b/graphicobjects/CMakeLists.txt
@@ -3,10 +3,15 @@ find_package(Qt5 REQUIRED COMPONENTS Core)
 
 set(SOURCES point.cpp
             graphicalobject.cpp
-            testfigure.cpp)
+            testfigure.cpp
+            vector2d.cpp
+)
+
 set(HEADERS point.h
             graphicalobject.h
-            testfigure.h)
+            testfigure.h
+            vector2d.h
+)
 
 ADD_LIBRARY(graphicobjects STATIC ${HEADERS} ${SOURCES})
 
