chore: implement neuronet classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ add_executable(landing-algo ${PROJECT_SOURCES})
 target_link_libraries(landing-algo PRIVATE Qt5::Widgets Qt5::Core)
 target_link_libraries(landing-algo PRIVATE graphicobjects)
 target_link_libraries(landing-algo PRIVATE gameobjects)
+target_link_libraries(landing-algo PRIVATE neuronet)
