chore: implement genetic algo

--- a/gameobjects/CMakeLists.txt
+++ b/gameobjects/CMakeLists.txt
@@ -3,12 +3,20 @@ find_package(Qt5 REQUIRED COMPONENTS Widgets)
 
 set(SOURCES
     lander.cpp
+    genome.cpp
+    genealgo.cpp
+    genecontroller.cpp
 )
 
 set(HEADERS
     lander.h
+    constants.h
+    genome.h
+    genealgo.h
+    genecontroller.h
 )
 
 ADD_LIBRARY(gameobjects STATIC ${SOURCES} ${HEADERS})
 
-target_link_libraries(gameobjects PRIVATE Qt5::Widgets Qt5::Core graphicobjects)
+target_link_libraries(gameobjects PRIVATE Qt5::Widgets Qt5::Core graphicobjects neuronet)
+
